--- a/index.html
+++ b/index.html
@@ -451,17 +451,17 @@
         </div>
         <ul class="item-list">
           <li class="item"><span class="item-name">Ghee Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>120</span></li>
-          <li class="item"><span class="item-name">Ghee Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
+          <li class="item"><span class="item-name">Ghee Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>90</span></li>
           <li class="item"><span class="item-name">Ghee Podi Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>145</span></li>
-          <li class="item"><span class="item-name">Ghee Podi Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>120</span></li>
-          <li class="item"><span class="item-name">Ghee Garlic Chutney Masala</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
-          <li class="item"><span class="item-name">Ghee Garlic Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
-          <li class="item"><span class="item-name">Ghee Bomme Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
-          <li class="item"><span class="item-name">Ghee Bomme Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
+          <li class="item"><span class="item-name">Ghee Podi Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
+          <li class="item"><span class="item-name">Ghee Garlic Chutney Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
+          <li class="item"><span class="item-name">Ghee Garlic Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>90</span></li>
+          <li class="item"><span class="item-name">Bennee Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
+          <li class="item"><span class="item-name">Benne Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
           <li class="item"><span class="item-name">Ghee Mysore Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
           <li class="item"><span class="item-name">Ghee Cheese Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>150</span></li>
-          <li class="item"><span class="item-name">Ghee Beet Dosa Plain</span><span class="dots"></span><span class="price"><span class="currency">₹</span>120</span></li>
-          <li class="item"><span class="item-name">Ghee Beet Dosa with Masala</span><span class="dots"></span><span class="price"><span class="currency">₹</span>130</span></li>
+          <li class="item"><span class="item-name">Ghee Set Dosa Plain</span><span class="dots"></span><span class="price"><span class="currency">₹</span>120</span></li>
+          <li class="item"><span class="item-name">Ghee Set Dosa with Aloo</span><span class="dots"></span><span class="price"><span class="currency">₹</span>130</span></li>
           <li class="item"><span class="item-name">Ghee Tomato Uttappam</span><span class="dots"></span><span class="price"><span class="currency">₹</span>130</span></li>
           <li class="item"><span class="item-name">Ghee Onion Uttappam</span><span class="dots"></span><span class="price"><span class="currency">₹</span>130</span></li>
           <li class="item"><span class="item-name">Ghee Mix Uttappam</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
