Changes in menu

--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
         <ul class="item-list">
           <li class="item"><span class="item-name">Idli (2 pcs)</span><span class="dots"></span><span class="price"><span class="currency">₹</span>70</span></li>
           <li class="item"><span class="item-name">Ghee Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>80</span></li>
-          <li class="item"><span class="item-name">Chilli Podi Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>90</span></li>
-          <li class="item"><span class="item-name">Bomme Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>60</span></li>
+          <li class="item"><span class="item-name">Ghee Podi Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>90</span></li>
+          <li class="item"><span class="item-name">Benne Tatte Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>60</span></li>
           <li class="item"><span class="item-name">Mini Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>90</span></li>
           <li class="item"><span class="item-name">Medu Vada (per piece)</span><span class="dots"></span><span class="price"><span class="currency">₹</span>45</span></li>
         </ul>
