--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           <li class="item"><span class="item-name">Ghee Podi Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
           <li class="item"><span class="item-name">Ghee Garlic Chutney Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
           <li class="item"><span class="item-name">Ghee Garlic Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>90</span></li>
-          <li class="item"><span class="item-name">Bennee Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
+          <li class="item"><span class="item-name">Benne Plain Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
           <li class="item"><span class="item-name">Benne Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
           <li class="item"><span class="item-name">Ghee Mysore Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>140</span></li>
           <li class="item"><span class="item-name">Ghee Cheese Masala Dosa</span><span class="dots"></span><span class="price"><span class="currency">₹</span>150</span></li>
