--- a/menu-snacks.html
+++ b/menu-snacks.html
@@ -440,25 +440,32 @@
     <main class="grid">
       <!-- LEFT: SNACKS + FRITTERS -->
       <div class="left">
-        <section class="section">
-          <div class="section-header">
-            <div class="section-title">
-              <span class="icon">🍟</span>
-              <span>Snacks</span>
-            </div>
-            <div class="section-tag">Street Faves</div>
-          </div>
-          <ul class="item-list">
-            <li class="item"><span class="item-name">Vada Pav</span><span class="dots"></span><span class="price"><span class="currency">₹</span>40</span></li>
-            <li class="item"><span class="item-name">Cheese Vada Pav</span><span class="dots"></span><span class="price"><span class="currency">₹</span>50</span></li>
-            <li class="item"><span class="item-name">Masala Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>80</span></li>
-            <li class="item"><span class="item-name">Pav Bhaji</span><span class="dots"></span><span class="price"><span class="currency">₹</span>150</span></li>
-            <li class="item"><span class="item-name">Cheese Pav Bhaji</span><span class="dots"></span><span class="price"><span class="currency">₹</span>170</span></li>
-            <li class="item"><span class="item-name">Tandoori Maggie</span><span class="dots"></span><span class="price"><span class="currency">₹</span>70</span></li>
-            <li class="item"><span class="item-name">Cheese Maggie</span><span class="dots"></span><span class="price"><span class="currency">₹</span>85</span></li>
-            <li class="item"><span class="item-name">Tandoori Maggie</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
-          </ul>
-        </section>
+       <section class="section">
+  <div class="section-header">
+    <div class="section-title">
+      <span class="icon">🍟</span>
+      <span>Snacks</span>
+    </div>
+    <div class="section-tag">Street Faves</div>
+  </div>
+
+  <ul class="item-list">
+    <li class="item"><span class="item-name">Vada Pav</span><span class="dots"></span><span class="price"><span class="currency">₹</span>40</span></li>
+    <li class="item"><span class="item-name">Cheese Vada Pav</span><span class="dots"></span><span class="price"><span class="currency">₹</span>50</span></li>
+    <li class="item"><span class="item-name">Masala Idli</span><span class="dots"></span><span class="price"><span class="currency">₹</span>80</span></li>
+    <li class="item"><span class="item-name">Pav Bhaji</span><span class="dots"></span><span class="price"><span class="currency">₹</span>150</span></li>
+    <li class="item"><span class="item-name">Cheese Pav Bhaji</span><span class="dots"></span><span class="price"><span class="currency">₹</span>170</span></li>
+
+    <!-- Newly added items -->
+    <li class="item"><span class="item-name">Aloo Petiz</span><span class="dots"></span><span class="price"><span class="currency">₹</span>25</span></li>
+    <li class="item"><span class="item-name">Aloo Pyaaz Petiz</span><span class="dots"></span><span class="price"><span class="currency">₹</span>25</span></li>
+    <li class="item"><span class="item-name">Aloo Masala Petiz</span><span class="dots"></span><span class="price"><span class="currency">₹</span>35</span></li>
+
+    <li class="item"><span class="item-name">Cheese Maggie</span><span class="dots"></span><span class="price"><span class="currency">₹</span>85</span></li>
+    <li class="item"><span class="item-name">Tandoori Maggie</span><span class="dots"></span><span class="price"><span class="currency">₹</span>100</span></li>
+  </ul>
+</section>
+
 
          <section class="section">
           <div class="section-header">
